; ModuleID = '/home/carl/AnghaBench/freebsd/sys/rpc/extr_auth_none.c_authnone_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/rpc/extr_auth_none.c_authnone_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.authnone_private = type { i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i32, i32* }

@authnone_private = common dso_local global %struct.authnone_private zeroinitializer, align 8
@_null_auth = common dso_local global i32 0, align 4
@authnone_ops = common dso_local global i32 0, align 4
@MAX_MARSHAL_SIZE = common dso_local global i32 0, align 4
@XDR_ENCODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @authnone_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @authnone_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.authnone_private*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store %struct.authnone_private* @authnone_private, %struct.authnone_private** %3, align 8
  %5 = load i32, i32* @_null_auth, align 4
  %6 = load %struct.authnone_private*, %struct.authnone_private** %3, align 8
  %7 = getelementptr inbounds %struct.authnone_private, %struct.authnone_private* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32 %5, i32* %8, align 8
  %9 = load %struct.authnone_private*, %struct.authnone_private** %3, align 8
  %10 = getelementptr inbounds %struct.authnone_private, %struct.authnone_private* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  store i32 %5, i32* %11, align 4
  %12 = load %struct.authnone_private*, %struct.authnone_private** %3, align 8
  %13 = getelementptr inbounds %struct.authnone_private, %struct.authnone_private* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 2
  store i32* @authnone_ops, i32** %14, align 8
  %15 = load %struct.authnone_private*, %struct.authnone_private** %3, align 8
  %16 = getelementptr inbounds %struct.authnone_private, %struct.authnone_private* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @MAX_MARSHAL_SIZE, align 4
  %19 = load i32, i32* @XDR_ENCODE, align 4
  %20 = call i32 @xdrmem_create(i32* %4, i32 %17, i32 %18, i32 %19)
  %21 = load %struct.authnone_private*, %struct.authnone_private** %3, align 8
  %22 = getelementptr inbounds %struct.authnone_private, %struct.authnone_private* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = call i32 @xdr_opaque_auth(i32* %4, i32* %23)
  %25 = load %struct.authnone_private*, %struct.authnone_private** %3, align 8
  %26 = getelementptr inbounds %struct.authnone_private, %struct.authnone_private* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = call i32 @xdr_opaque_auth(i32* %4, i32* %27)
  %29 = call i32 @XDR_GETPOS(i32* %4)
  %30 = load %struct.authnone_private*, %struct.authnone_private** %3, align 8
  %31 = getelementptr inbounds %struct.authnone_private, %struct.authnone_private* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 8
  %32 = call i32 @XDR_DESTROY(i32* %4)
  ret void
}

declare dso_local i32 @xdrmem_create(i32*, i32, i32, i32) #1

declare dso_local i32 @xdr_opaque_auth(i32*, i32*) #1

declare dso_local i32 @XDR_GETPOS(i32*) #1

declare dso_local i32 @XDR_DESTROY(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
